# formal-languages-automata

./: .gitignore  CMakeLists.txt  README.md  code_cov.sh  dfa.cpp  dfa.h  edge.h  nfa.cpp  nfa.h  node.h  solve.cpp  test.cpp
